# CLion_ResizeBilinear

./: CMakeLists.txt  README.md  main.cpp
OUTPUT/: gray.pgm  output.pgm
